# RTPM

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
src/shaders/: denoise.fs  gBuffer.fs  gBuffer.vs  rayTracing.fs  shadowMap.fs  temporalDenoise.fs  test.fs  vScreen.vs
src/utils/: Camera.h  Object.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  View.cpp  View.h
